[gd_scene load_steps=7 format=2]

[ext_resource path="res://Item/obj/wrench01.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Script/Item.gd" type="Script" id=2]
[ext_resource path="res://pick-up coin.wav" type="AudioStream" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.835294, 0.835294, 0.835294, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.337964, 1.64328, 0.542556 )

[sub_resource type="Animation" id=3]
resource_name = "animazioneItems"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("wrenchMesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 3.5833, -2.06882 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wrenchMesh:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.01, 0.01, 0.01 ), Vector3( 0.005, 0.005, 0.005 ), Vector3( 0.003, 0.003, 0.003 ) ]
}

[node name="Item" type="Area"]
transform = Transform( -6.51683e-08, 0.2, 0.34641, 0, 0.34641, -0.2, -0.4, -3.25841e-08, -5.64374e-08, 0, 0, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="wrenchMesh" type="MeshInstance" parent="."]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0 )
mesh = ExtResource( 1 )
material/0 = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.59003, 0 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="AnimationItems" type="AnimationPlayer" parent="."]
anims/animazioneItems = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Item_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
